syntax = "proto3";

package CrowdWorld.proto;

enum Config_Type {
  NONE   = 0;   // Default no action state or state heritaged from parent.
// Modification
  CREATE = 1;   // Create entity.
  UPDATE = 2;   // Update entity.
  RESET  = 3;   // (Hard) Update entity, with non-refered child removed.
// Data
  CURRENT = 4;  // Get current status.
  HISTORY = 5;  // Get all available status in record.
  ADVICED = 6;  // Get virtual advicing status.
// Misc
  HYBRID  = 7;  // Do no action here and proceed children.
  QUERY   = 8;  // Execute string queries.
}

message Query {
  string name = 1;
  repeated double args = 2;
  repeated string sargs = 3;
}

message Vec2 {
  double x = 1;
  double y = 2;
  bool hasValue = 8;
}

message Vec3 {
  double x = 1;
  double y = 2;
  double z = 3;
  bool hasValue = 8;
}

message Vec4 {
  double x = 1;
  double y = 2;
  double z = 3;
  double w = 4;
  bool hasValue = 8;
}

